// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`inside-computed-member-expression.ng - {"spaceInParens":true,"computedPropertySpacing":true,"trailingComma":"none","spaceUnaryOps":true} format 1`] = `
====================================options=====================================
computedPropertySpacing: true
parsers: ["__ng_interpolation"]
printWidth: 80
spaceInParens: true
spaceUnaryOps: true
trailingComma: "none"
                                                                                | printWidth
=====================================input======================================
(a|b)[c]

=====================================output=====================================
( a | b )[ c ]
================================================================================
`;

exports[`inside-member-expression.ng - {"spaceInParens":true,"computedPropertySpacing":true,"trailingComma":"none","spaceUnaryOps":true} format 1`] = `
====================================options=====================================
computedPropertySpacing: true
parsers: ["__ng_interpolation"]
printWidth: 80
spaceInParens: true
spaceUnaryOps: true
trailingComma: "none"
                                                                                | printWidth
=====================================input======================================
(a|b).c

=====================================output=====================================
( a | b ).c
================================================================================
`;

exports[`inside-optional-expression.ng - {"spaceInParens":true,"computedPropertySpacing":true,"trailingComma":"none","spaceUnaryOps":true} format 1`] = `
====================================options=====================================
computedPropertySpacing: true
parsers: ["__ng_interpolation"]
printWidth: 80
spaceInParens: true
spaceUnaryOps: true
trailingComma: "none"
                                                                                | printWidth
=====================================input======================================
(a|b)?.c

=====================================output=====================================
( a | b )?.c
================================================================================
`;

exports[`inside-unary.ng - {"spaceInParens":true,"computedPropertySpacing":true,"trailingComma":"none","spaceUnaryOps":true} format 1`] = `
====================================options=====================================
computedPropertySpacing: true
parsers: ["__ng_interpolation"]
printWidth: 80
spaceInParens: true
spaceUnaryOps: true
trailingComma: "none"
                                                                                | printWidth
=====================================input======================================
!(a|b)

=====================================output=====================================
! ( a | b )
================================================================================
`;
